Fix title size and alignment in blog page

--- a/src/components/post-list.module.css
+++ b/src/components/post-list.module.css
@@ -25,7 +25,7 @@
 
 @media screen and (max-width: 539px) {
     .postsWrapperBlog {
-        padding: 0px 30px;
+        padding: 0px 20px;
     }
   
 }
