--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -662,7 +662,7 @@ input:focus {
   }
 
   #postsWrapper {
-    padding: 0px 30px
+    padding: 0px 20px
   }
 
   #newsletter {
